--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_API_URL=https://backend-dxgwebsite.vercel.app
 NEXTAUTH_SECRET=c5ee2833fcbaf3420124aec65f84dc95
-CLIENT_ID=1035920800359-h0qqh2dsg8b0osp6qvllqcr46je6153h.apps.googleusercontent.com
-CLIENT_SECRET=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
-REDIRECT_URI=https://dashboard-dxgwebsite.vercel.app/api/google/auth
+CLIENT_ID=837613516521-f29t1vj61df8l3e7tckd297aom58qp9o.apps.googleusercontent.com
+CLIENT_SECRET=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
+REDIRECT_URI=https://dashboard.dxg-agency.com/api/google/auth
 
 
